1: fix background on mobile

--- a/css/semantic-ui/components/card.css
+++ b/css/semantic-ui/components/card.css
@@ -31,7 +31,7 @@
           flex-direction: column;
   width: 290px;
   min-height: 0px;
-  background: #FFFFFB;
+  background: #FFFFFF;
   padding: 0em;
   border: none;
   border-radius: 0.28571429rem;
